Add openHAB plugin

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env:esp32dev]
 platform = espressif32
+; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.05/platform-espressif32.zip
 board = esp32dev
 framework = arduino
 lib_deps =
