--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 ; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.05/platform-espressif32.zip
 board = esp32dev
 framework = arduino
+board_build.partitions = huge_app.csv
 lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@^6.19.4
